AMP-30314: Tried to upgrade spring-context and spring-security to 5.x
bug - login does not work!
todo - test all services work
todo - run junit tests